feat(app-data-service): added db provisioning for storing user widgets
widgets db provisioning

none
